# sistem-manajemen-sekolah

./: .gitignore  README.md  main_stdout.txt  nodemon_stdout.txt  postcss_stdout.txt  pyproject.toml  todo.md
.backups/: App.tsx.backup  Modal.tsx.backup  Pagination.tsx.backup  absensi.routes.ts.backup  auth.routes.ts.backup  index.ts.backup  inventaris.routes.ts.backup  jadwal.routes.ts.backup  nilai.routes.ts.backup  package.json.backup  pembayaran.routes.ts.backup  siswa.api.ts.backup  todo.md.backup  user.routes.ts.backup
backend/: package-lock.json  package.json
backend/src/: index.ts
backend/src/config/: database.ts
backend/src/controllers/: auth.controller.ts  guru.controller.ts  kelas.controller.ts  mata-pelajaran.controller.ts  siswa.controller.ts
backend/src/entities/: Absensi.ts  Guru.ts  Inventaris.ts  Jadwal.ts  JenisPembayaran.ts  KategoriInventaris.ts  Kelas.ts  LogActivity.ts  MataPelajaran.ts  Nilai.ts  Pembayaran.ts  PeminjamanInventaris.ts  Role.ts  Siswa.ts  Staff.ts  TahunAjaran.ts  User.ts
browser/: global_browser.py
external_api/: __init__.py  function_utils.py  mcp_function_list.json
external_api/data_sources/: __init__.py  base.py  booking_source.py  client.py  commodities_source.py  metal_source.py  patents_source.py  pinterest_source.py  scholar_source.py  tripadvisor_source.py  twitter_source.py  yahoo_source.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
pyarmor_runtime_000000/: __init__.py
(+49 files in other folders)
